tests/ft/type_checking/valid/field_access.jk
type Point(x: int, y: int, name: string);

p = Point(x: 15, y: 14, name: "p");

mut t0 = p.x;
t0 = 15;
mut t1 = p.y;
t1 = 15;
